--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.ip2location</groupId>
 			<artifactId>ip2location-java</artifactId>
 			<version>8.11.1</version>
