--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.ip2location</groupId>
 			<artifactId>ip2location-java</artifactId>
 			<version>8.11.1</version>
