--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.open-in-view=false
+
 server.port=8080
 spring.datasource.name=weather_db
 spring.datasource.url=jdbc:mysql://localhost:3306/weather_db
