--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,33 +12,33 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 
+spring.redis.host=localhost
+spring.redis.port=6379
+
 # spring.mvc.pathmatch.matching-strategy=ant-path=matcher
 # To enable debug mood
 # debug=true
 
 # trace=true
 # logging.level.root=WARN
-# loggin.level.com.shopme=DEBUG
 
 # Multipart Configuration
 
-# enabiling multipart uploads
+# enabling multipart uploads
 # spring.servlet.multipart.enabled = true
 
 # Max file size
 # spring.servlet.multipart.max-file-size = 1MB
-
-# maximum sabhi files ka size kitna ho skta hai
 # spring.servlet.multipart.max-request-size = 1MB
 
 # project.image=images/
 
 
-#Mail Sending Confiuration
+#Mail Sending Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=sarya1652003@gmail.com
-spring.mail.password=fpmuourxjasccpce
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
