Upgraded to Spring Boot 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,26 +12,8 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 
-spring.redis.host=localhost
-spring.redis.port=6379
-
-# spring.mvc.pathmatch.matching-strategy=ant-path=matcher
-# To enable debug mood
-# debug=true
-
-# trace=true
-# logging.level.root=WARN
-
-# Multipart Configuration
-
-# enabling multipart uploads
-# spring.servlet.multipart.enabled = true
-
-# Max file size
-# spring.servlet.multipart.max-file-size = 1MB
-# spring.servlet.multipart.max-request-size = 1MB
-
-# project.image=images/
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
 
 #Mail Sending Configuration
