--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+spring.cache.type=redis
 
 #Mail Sending Configuration
 spring.mail.host=smtp.gmail.com
