--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,14 @@ spring.jpa.open-in-view=true
 
 server.port=8080
 spring.datasource.name=weather_db
-#spring.datasource.url=jdbc:mysql://localhost:3306/weather_db
-spring.datasource.url=jdbc:mysql://database-1.cw1sojsckio0.ap-south-1.rds.amazonaws.com:3306/weather_db
-spring.datasource.username=admin
-spring.datasource.password=admin123456
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/weather_db
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
